Fixed broken CSS

--- a/app/assets/stylesheets/bootstrap-theme.css
+++ b/app/assets/stylesheets/bootstrap-theme.css
@@ -5505,7 +5505,7 @@ a.list-group-item.active > .badge,
 
 .jumbotron {
   padding: 50px;
-  margin-bottom: 30px
+  margin-bottom: 30px;
   font-size: 23px;
   font-weight: 200;
   line-height: 2.1428571435;
